--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 }
 
 body{
-    height:100vh;
-    background: 
+    min-height:100vh;
+    background:
         linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
         url('background.jpg') no-repeat center center/cover;
     color:white;
@@ -26,17 +26,19 @@ body{
     justify-content:space-between;
 }
 
+/* ---------- TOP ---------- */
+
 .top{
     text-align:center;
-    padding-top:30px;
+    padding:25px 15px 10px;
 }
 
 .logo{
-    width:320px;
+    width:clamp(120px, 25vw, 260px);
 }
 
 h1{
-    font-size:42px;
+    font-size:clamp(24px, 5vw, 42px);
     font-weight:800;
     letter-spacing:2px;
     margin-top:10px;
@@ -45,19 +47,23 @@ h1{
 .tagline{
     color:#8BC34A;
     font-style:italic;
-    font-size:18px;
+    font-size:clamp(14px, 2.5vw, 18px);
 }
+
+/* ---------- MIDDLE ---------- */
 
 .middle{
     display:flex;
-    justify-content:space-around;
+    justify-content:space-between;
     align-items:center;
-    padding:20px 60px;
+    gap:30px;
+    padding:20px 8%;
+    flex-wrap:wrap;
 }
 
-.left{
-    width:45%;
-    font-size:16px;
+.left, .right{
+    flex:1 1 350px;
+    font-size:clamp(14px, 2.5vw, 16px);
     line-height:1.8;
 }
 
@@ -70,18 +76,31 @@ h1{
 }
 
 .qr{
-    width:170px;
+    width:clamp(130px, 25vw, 180px);
     margin-top:10px;
-    border:4px solid white;
-    border-radius:10px;
+    background:white;
+    padding:10px;
+    border-radius:12px;
+    box-shadow:0 10px 25px rgba(0,0,0,0.4);
 }
+
+/* ---------- BOTTOM ---------- */
 
 .bottom{
     text-align:center;
-    padding-bottom:20px;
-    font-size:18px;
+    padding:15px;
+    font-size:clamp(14px, 3vw, 18px);
     font-weight:600;
     letter-spacing:1px;
+}
+
+/* ---------- MOBILE STACK ---------- */
+
+@media(max-width:768px){
+    .middle{
+        flex-direction:column;
+        text-align:center;
+    }
 }
 </style>
 </head>
@@ -89,7 +108,7 @@ h1{
 <body>
 
 <div class="top">
-    <img src="logo.png" class="logo">
+    <img src="logo.png" class="logo" alt="Logo">
     <h1>ZAM ZAM Water Filter</h1>
     <div class="tagline">Purity You Can Taste</div>
 </div>
@@ -111,7 +130,7 @@ h1{
 
     <div class="right">
         <p><b>Scan for Location & Directions</b></p>
-        <img src="qr.png" class="qr">
+        <img src="qr.png" class="qr" alt="QR">
     </div>
 </div>
 
